src/objects/loan__Payoff_Quote__c.object
<CustomObject>
    <fields>
        <fullName>loan__Loan_Account__c</fullName>
        <label>Loan Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Payoff Quote</relationshipLabel>
        <relationshipName>Payoff_Quote</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Poq_Accrued_Interest__c</fullName>
        <description>Accrued Interest from Transaction Date to POQ Date</description>
        <label>Accrued Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Poq_Accrued_Late_Charges__c</fullName>
        <label>Accrued Late Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Poq_Discounted_Interest__c</fullName>
        <label>Discounted Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Poq_Excess_Amount_Paid__c</fullName>
        <label>On Account Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Poq_Interest_Paid_Till_Dt__c</fullName>
        <description>Interest Paid till transaction Date</description>
        <label>Interest Paid Till Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Poq_Interest_Per_Diem__c</fullName>
        <label>Interest Per Diem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Poq_Interest_Rate__c</fullName>
        <description>Rate of Interest</description>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Poq_Maturity_Date__c</fullName>
        <description>Maturity Date at the time of Payoff Quote Generation</description>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Poq_Next_Payment_Due_Dt__c</fullName>
        <label>Next Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Poq_Other_Fees__c</fullName>
        <label>Other Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Poq_Prepayment_Penalty__c</fullName>
        <description>Prepayment Penalty</description>
        <label>Prepayment Penalty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Poq_Principal_Bal__c</fullName>
        <description>Principal Balance</description>
        <label>Principal Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Poq_Total_Payoff_Amount__c</fullName>
        <label>Total Payoff Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Poq_Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Poq_Trust_Balance__c</fullName>
        <label>Trust Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Poq_Unpaid_Charges__c</fullName>
        <label>Unpaid Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Poq_Unpaid_Interest__c</fullName>
        <description>Interest not paid.</description>
        <label>Interest Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Poq_Unpaid_Late_Charges__c</fullName>
        <description>Unpaid Late Charges.</description>
        <label>Unpaid Late Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Poq_valid_till_Dt__c</fullName>
        <label>Payoff Date</label>
        <type>Date</type>
    </fields>
    <label>Payoff Quote</label>
    <nameField>
        <label>Payoff Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payoff Quote</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>